...
    <string name="sunday">Sun</string>
    <string name="daily_effort_error">Daily Effort cannot be Greater than Final Goal!!!</string>
    <string name="dates_error">Starting Date cannot be greater than Ending Date!!!</string>
    <string name="back_button">Back Button</string>
    <string name="refresh">Refresh</string>
    <string name="progress_bar">Completed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome </string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="m_circle">M</string>
    <string name="t_circle">T</string>
    <string name="w_circle">W</string>
    <string name="f_circle">F</string>
    <string name="s_circle">S</string>
    <string name="timer_running_toast">The Timer is Running! Navigation between Topics is Disabled!!!</string>
    <string name="user_not_logged">User not Logged In</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="refresh_data_button">Refresh Data</string>
    <string name="delete_button">Delete</string>
    <string name="starting_date_label">"Starting Date: "</string>
    <string name="ending_date_label">"Ending Date: "</string>
...
