...
     * @param context The context used to display toast messages and restart the app.
     */
    fun logout(context: Context) {
        val firebaseAuth = FirebaseAuth.getInstance()
        if (firebaseAuth.currentUser != null) {
            firebaseAuth.signOut()
            Toast.makeText(context, "User is logged out", Toast.LENGTH_SHORT).show()
        } else {
            Toast.makeText(context, "User is already logged out", Toast.LENGTH_SHORT).show()
        }
        // Restart the app
        val intent = context.packageManager.getLaunchIntentForPackage(context.packageName)
        intent?.addFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP or Intent.FLAG_ACTIVITY_NEW_TASK)
        context.startActivity(intent)
    }
...
